
1.6 ...
	ENHANCEMENTS
	check_ide_smart now defaults to plugin output, original output appended with -v
	Extra-Opts are now enabled by default

	FIXES
	Don't let e.g. check_http's -C option reset SSL version if e.g. -S 1 -C 5 is specified
	check_ide_smart could disable offline auto tests but could not re-enable them.
	  For this reason all SMART command modes have been disabled.

	WARNINGS
	check_procs now ignores its parent process to avoid unexpected results when invoked via certain shells
	utils.sh no longer defines ECH
	check_ide_smart -q/--quiet and -n/--nagios (Nagios-compatile output) are now deprecated
	  but accepted for backward-compatibility
	check_ide_smart -0/--auto-off, -1/--auto-on and -i/--immediate: options have
	  been disabled because they were broken
	State retention: the NAGIOS_PLUGIN_STATE_DIRECTORY environment variable has been
	  renamed MP_STATE_DIRECTORY. The old variable will continue to work in v1.6.x

1.5 2nd October 2013
	ENHANCEMENTS
	New check_dbi plugin for checking an (SQL) database using DBI
	Let OpenSSL load its configuration file (see the OPENSSL_config(3) man page)
	Add performance data to check_apt
	Add performance data to check_procs
	Added -4/-6 options to check_dig (Ville Mattila)
	New check_oracle --connect option to perform real login
	New check_nagios -t option to override the default timeout
	New check_disk -f/--freespace-ignore-reserved option to ignore space reserved for root
	New check_disk -N/--include-type option to limit the filesystem types to check
	Allow for building the plugins in parallel
	Add --without-{dbi,ldap,radius} options to ./configure
	Made Verbose output of check_sensors compliant (Gabriele Tozzi)
	New switch -E/--extended-perfdata for check_http to print additional performance data (Sebastian Nohn)
	New check_http -d option to specify a string to expect within the response headers
	New check_http -J/-K options for client certificate authentication support