@@ -303,3 +303,4 @@ Simon Kainz
 Steve Weinreich
 Geoff Oakham
 Tim Laszlo
+Stéphane Bortzmeyer
